tests/paczka1/fuzzy1/25426890.err
Error in line 13: MNU S585 19,9
Error in line 16: SQ6SYdI8c S649 40,3
Error in line 22: 0JnD6OHTb A991 45,5
